# sine-mml

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  RELEASE.md  USAGE.md  opencode.json
.github/: pull_request_template.md
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
docs/: capabilities.md
docs/memos/: MIDIストリーミング機能追加.md  MMLでサイン派コントロール.md  MMLループ仕様追加.md  オプションのショートハンド充実.md  タイ記号仕様追加.md  ファイル読み取り仕様追加.md  機能改善.md
docs/proposals/: PROP-20260111-implementation-workflow-gaps.md
docs/requirements/: REQ-CLI-001_MML-Synthesizer.md  REQ-CLI-002_MML-Synthesizer-Enhancement.md  REQ-CLI-003_MML-Syntax-Extension.md  REQ-CLI-004_MML-Advanced-Features.md  REQ-CLI-005_Tie-Notation.md  REQ-CLI-006_MIDI-Streaming-Tuplet.md  REQ-CLI-007_CLI-Option-Shorthand.md
docs/research/: TECH-REPORT-20260110_Combined.md
docs/tests/: テスト項目書.md
examples/: README.md  arpeggio.mml  beethoven-style.mml  beethoven-tempest.mml  chime.mml  chopin-2026.mml  dynamics.mml  nested-loop.mml  retro-game.mml  scale.mml  tuplet-advanced.mml  tuplet.mml  twinkle-star.mml
src/: lib.rs  main.rs
src/audio/: error.rs  exporter.rs  mod.rs  player.rs  synthesizer.rs  waveform.rs
src/cli/: args.rs  handlers.rs  mod.rs  output.rs
src/db/: history.rs  mod.rs  schema.rs
src/midi/: device.rs  error.rs  message.rs  mod.rs  player.rs
tests/: audio_synthesizer_test.rs  cli_args_test.rs  cli_integration.rs  e2e_midi_tuplet.rs  midi_message_test.rs  midi_player_test.rs  mml_ast_test.rs  mml_parser_test.rs  mml_tie_test.rs  mml_tokenizer_test.rs
(+74 files in other folders)
