[package]
name = "sine-mml"
version = "0.1.0"
edition = "2021"
authors = ["takemo101"]
description = "MML (Music Macro Language) Synthesizer CLI"
license = "MIT"
repository = "https://github.com/takemo101/sine-mml"
readme = "README.md"
keywords = ["mml", "music", "synthesizer", "audio", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rusqlite = { version = "0.38", features = ["bundled"] }
thiserror = "1.0"
fundsp = "0.18"
cpal = "0.15"
hound = "3.5"
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"
indicatif = "0.18.3"
console = "0.16.2"
comfy-table = "7.1"

[dev-dependencies]

[[bin]]
name = "sine-mml"
path = "src/main.rs"

[lib]
name = "sine_mml"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
